--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQJoinTotall.storyboard
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQJoinTotall.storyboard
@@ -117,26 +117,26 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8PD-1x-6kC">
-                                                    <rect key="frame" x="15" y="25.5" width="42" height="17"/>
+                                                    <rect key="frame" x="10" y="27" width="60" height="14.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="42" id="kqE-G5-G9V"/>
+                                                        <constraint firstAttribute="width" constant="60" id="kqE-G5-G9V"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hio-c2-9qi">
-                                                    <rect key="frame" x="77" y="25.5" width="42" height="17"/>
+                                                    <rect key="frame" x="85" y="27" width="60" height="14.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="42" id="vsR-o6-AdZ"/>
+                                                        <constraint firstAttribute="width" constant="60" id="vsR-o6-AdZ"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t8D-Q8-5Pg">
-                                                    <rect key="frame" x="149" y="25.5" width="131" height="17"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <rect key="frame" x="155" y="27" width="145" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -152,7 +152,7 @@
                                                     </connections>
                                                 </button>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f4U-7g-EJg">
-                                                    <rect key="frame" x="57" y="16" width="12" height="15"/>
+                                                    <rect key="frame" x="65" y="16" width="12" height="15"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="15" id="aZx-3d-Cma"/>
                                                         <constraint firstAttribute="width" constant="12" id="ak6-4D-c6l"/>
@@ -161,15 +161,15 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="Hio-c2-9qi" firstAttribute="centerY" secondItem="gWG-Tq-NWR" secondAttribute="centerY" id="26C-f9-WaA"/>
-                                                <constraint firstItem="t8D-Q8-5Pg" firstAttribute="leading" secondItem="Hio-c2-9qi" secondAttribute="trailing" constant="30" id="6gE-IU-SJX"/>
+                                                <constraint firstItem="t8D-Q8-5Pg" firstAttribute="leading" secondItem="Hio-c2-9qi" secondAttribute="trailing" constant="10" id="6gE-IU-SJX"/>
                                                 <constraint firstItem="f4U-7g-EJg" firstAttribute="centerY" secondItem="gWG-Tq-NWR" secondAttribute="centerY" constant="-10" id="AE7-hG-znX"/>
                                                 <constraint firstAttribute="trailing" secondItem="Jhc-mc-oEW" secondAttribute="trailing" constant="15" id="QCQ-zZ-L8O"/>
-                                                <constraint firstItem="Hio-c2-9qi" firstAttribute="leading" secondItem="8PD-1x-6kC" secondAttribute="trailing" constant="20" id="Xzv-Yh-4p7"/>
+                                                <constraint firstItem="Hio-c2-9qi" firstAttribute="leading" secondItem="8PD-1x-6kC" secondAttribute="trailing" constant="15" id="Xzv-Yh-4p7"/>
                                                 <constraint firstItem="8PD-1x-6kC" firstAttribute="centerY" secondItem="gWG-Tq-NWR" secondAttribute="centerY" id="ZOo-x2-OmV"/>
-                                                <constraint firstItem="Jhc-mc-oEW" firstAttribute="leading" secondItem="t8D-Q8-5Pg" secondAttribute="trailing" constant="30" id="gWG-Kj-2gm"/>
+                                                <constraint firstItem="Jhc-mc-oEW" firstAttribute="leading" secondItem="t8D-Q8-5Pg" secondAttribute="trailing" constant="10" id="gWG-Kj-2gm"/>
                                                 <constraint firstItem="t8D-Q8-5Pg" firstAttribute="centerY" secondItem="gWG-Tq-NWR" secondAttribute="centerY" id="p1j-Xd-EhK"/>
-                                                <constraint firstItem="f4U-7g-EJg" firstAttribute="leading" secondItem="8PD-1x-6kC" secondAttribute="trailing" id="pD9-Bd-pEF"/>
-                                                <constraint firstItem="8PD-1x-6kC" firstAttribute="leading" secondItem="gWG-Tq-NWR" secondAttribute="leading" constant="15" id="tLz-ca-6JM"/>
+                                                <constraint firstItem="f4U-7g-EJg" firstAttribute="leading" secondItem="8PD-1x-6kC" secondAttribute="trailing" constant="-5" id="pD9-Bd-pEF"/>
+                                                <constraint firstItem="8PD-1x-6kC" firstAttribute="leading" secondItem="gWG-Tq-NWR" secondAttribute="leading" constant="10" id="tLz-ca-6JM"/>
                                                 <constraint firstItem="Jhc-mc-oEW" firstAttribute="centerY" secondItem="gWG-Tq-NWR" secondAttribute="centerY" id="xBY-8o-BtC"/>
                                             </constraints>
                                         </tableViewCellContentView>
