--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireControl.storyboard
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireControl.storyboard
@@ -80,7 +80,7 @@
                                 <rect key="frame" x="0.0" y="108" width="375" height="559"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KZp-q0-eYc" customClass="YQImplementView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KZp-q0-eYc" customClass="YQImplementView" customModule="OpticalValleyUnite" customModuleProvider="target">
                                 <rect key="frame" x="20" y="387" width="335" height="240"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IHE-nn-eEZ">
@@ -91,7 +91,7 @@
                                             <constraint firstAttribute="width" constant="110" id="r1d-QL-QFP"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <state key="normal" title="  立即执行" image="icon_fire_edit">
+                                        <state key="normal" title="  立即反馈" image="icon_fire_edit">
                                             <color key="titleColor" red="0.44571961450000003" green="0.68072509299999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
@@ -102,6 +102,9 @@
                                                 <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="atOnceFeedBack:" destination="rYK-YH-62r" eventType="touchUpInside" id="SCU-8u-bFu"/>
+                                        </connections>
                                     </button>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9nI-C8-NFG">
                                         <rect key="frame" x="0.0" y="60" width="335" height="126"/>
@@ -141,18 +144,8 @@
                                                     <action selector="alreadyImplementAndCheckOutMapViewClick:" destination="rYK-YH-62r" eventType="touchUpInside" id="LOg-kN-ENx"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mXC-Ny-0RB">
-                                                <rect key="frame" x="0.0" y="0.0" width="167.5" height="44"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <state key="normal" title="放弃执行">
-                                                    <color key="titleColor" white="0.48999999999999999" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="abandonImplementClick:" destination="rYK-YH-62r" eventType="touchUpInside" id="EuR-Mx-JBi"/>
-                                                </connections>
-                                            </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IDw-Sn-FBj">
-                                                <rect key="frame" x="167.5" y="0.0" width="167.5" height="44"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="335" height="44"/>
                                                 <color key="backgroundColor" red="0.44571961450000003" green="0.68072509299999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="前往执行">
@@ -167,17 +160,13 @@
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="IDw-Sn-FBj" secondAttribute="bottom" id="4Ud-VB-bN1"/>
                                             <constraint firstAttribute="trailing" secondItem="IDw-Sn-FBj" secondAttribute="trailing" id="8ba-lR-LUw"/>
-                                            <constraint firstAttribute="bottom" secondItem="mXC-Ny-0RB" secondAttribute="bottom" id="9va-Cy-2T7"/>
                                             <constraint firstItem="sv3-II-Zc7" firstAttribute="leading" secondItem="dAh-0U-mwW" secondAttribute="leading" id="HpZ-vl-SFX"/>
-                                            <constraint firstItem="IDw-Sn-FBj" firstAttribute="width" secondItem="mXC-Ny-0RB" secondAttribute="width" id="IU1-aA-qLU"/>
                                             <constraint firstItem="sv3-II-Zc7" firstAttribute="top" secondItem="dAh-0U-mwW" secondAttribute="top" id="Jup-0N-AwH"/>
                                             <constraint firstAttribute="bottom" secondItem="sv3-II-Zc7" secondAttribute="bottom" id="Lmt-CL-6RE"/>
                                             <constraint firstAttribute="trailing" secondItem="sv3-II-Zc7" secondAttribute="trailing" id="Vvd-xD-pBN"/>
-                                            <constraint firstItem="mXC-Ny-0RB" firstAttribute="leading" secondItem="dAh-0U-mwW" secondAttribute="leading" id="WG8-pu-Yeb"/>
                                             <constraint firstItem="IDw-Sn-FBj" firstAttribute="top" secondItem="dAh-0U-mwW" secondAttribute="top" id="cwk-e8-MVe"/>
-                                            <constraint firstItem="mXC-Ny-0RB" firstAttribute="top" secondItem="dAh-0U-mwW" secondAttribute="top" id="i5V-oz-94X"/>
+                                            <constraint firstItem="IDw-Sn-FBj" firstAttribute="leading" secondItem="dAh-0U-mwW" secondAttribute="leading" id="eBO-k5-Vzs"/>
                                             <constraint firstAttribute="height" constant="44" id="vyM-W3-7PH"/>
-                                            <constraint firstItem="IDw-Sn-FBj" firstAttribute="leading" secondItem="mXC-Ny-0RB" secondAttribute="trailing" id="zJ6-kg-1cB"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -211,7 +200,6 @@
                     </view>
                     <navigationItem key="navigationItem" title="实时地图" id="RNX-7K-Gq7"/>
                     <connections>
-                        <outlet property="abandonImplementBtn" destination="mXC-Ny-0RB" id="XSU-gm-BRV"/>
                         <outlet property="alreadyImplementBtn" destination="sv3-II-Zc7" id="9BL-av-JVh"/>
                         <outlet property="backButton" destination="IHE-nn-eEZ" id="6Wd-jD-uc2"/>
                         <outlet property="fireMapView" destination="yb3-Sb-cBk" id="O7d-hY-zx7"/>
