--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireMapDetail.storyboard
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireMapDetail.storyboard
@@ -81,7 +81,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FyJ-gP-qhA" userLabel="footerView">
                                         <rect key="frame" x="0.0" y="196" width="335" height="44"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0e6-NU-ivH">
+                                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0e6-NU-ivH">
                                                 <rect key="frame" x="0.0" y="0.0" width="335" height="44"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="放弃执行"/>
@@ -89,7 +89,7 @@
                                                     <action selector="giveUpImplementClick:" destination="aUt-lD-aje" eventType="touchUpInside" id="JRv-2F-Amh"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3fU-WA-DTW">
+                                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3fU-WA-DTW">
                                                 <rect key="frame" x="0.0" y="0.0" width="335" height="44"/>
                                                 <color key="backgroundColor" red="0.44571961450000003" green="0.68072509299999995" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -142,6 +142,8 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="atOnceImplement" destination="3fU-WA-DTW" id="bEc-Pu-Nda"/>
+                        <outlet property="giveupAbandon" destination="0e6-NU-ivH" id="G9b-wI-6BX"/>
                         <outlet property="locationMapView" destination="9to-PZ-M0t" id="pnp-nU-Ctd"/>
                         <outlet property="tableView" destination="jI0-Kx-SDE" id="JAB-6t-J12"/>
                     </connections>
