--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/View/YQFalsePositive.xib
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/View/YQFalsePositive.xib
@@ -25,14 +25,6 @@
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w6h-lN-nfc">
-                    <rect key="frame" x="135" y="57.5" width="45" height="45"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="45" id="4ge-F3-zUk"/>
-                        <constraint firstAttribute="width" constant="45" id="AcB-q8-gm6"/>
-                    </constraints>
-                    <state key="normal" image="btn_fire_add"/>
-                </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="误报" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mzg-GI-nQC">
                     <rect key="frame" x="167" y="20" width="41" height="24"/>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -82,8 +74,19 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w6h-lN-nfc">
+                    <rect key="frame" x="135" y="57.5" width="45" height="45"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="45" id="4ge-F3-zUk"/>
+                        <constraint firstAttribute="width" constant="45" id="AcB-q8-gm6"/>
+                    </constraints>
+                    <state key="normal" image="btn_fire_add"/>
+                    <connections>
+                        <action selector="addButtonClick:" destination="7cQ-dS-IB8" eventType="touchUpInside" id="ASX-Ed-7IP"/>
+                    </connections>
+                </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pqq-hg-rSA">
-                    <rect key="frame" x="102.5" y="354" width="170" height="50"/>
+                    <rect key="frame" x="103" y="354" width="170" height="50"/>
                     <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="NcW-4o-gdo"/>
@@ -93,6 +96,9 @@
                     <state key="normal" title="保存">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="saveButtonClick:" destination="7cQ-dS-IB8" eventType="touchUpInside" id="MxZ-3c-n9A"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -116,6 +122,10 @@
                 <constraint firstItem="weP-KY-KeG" firstAttribute="top" secondItem="yOz-Bd-JxC" secondAttribute="bottom" constant="10" id="yJR-Om-Ktw"/>
                 <constraint firstItem="mzg-GI-nQC" firstAttribute="top" secondItem="7cQ-dS-IB8" secondAttribute="top" constant="20" id="ynj-pk-aVD"/>
             </constraints>
+            <connections>
+                <outlet property="addNameTextField" destination="NMs-Ff-9kQ" id="rIz-8V-0fz"/>
+                <outlet property="reasonTextField" destination="LYL-nJ-cgt" id="DpB-YO-dT6"/>
+            </connections>
             <point key="canvasLocation" x="-158.5" y="49.5"/>
         </view>
     </objects>
