--- a/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireMapDetail.storyboard
+++ b/OpticalValleyUnite/Classes/UI/FireControlProfession/Controller/YQFireMapDetail.storyboard
@@ -25,6 +25,17 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CWc-HI-h9q">
+                                <rect key="frame" x="10" y="30" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Ugy-TK-std"/>
+                                    <constraint firstAttribute="width" constant="40" id="dzv-mK-xEI"/>
+                                </constraints>
+                                <state key="normal" image="icon_map_location"/>
+                                <connections>
+                                    <action selector="manualLocationBtnClick:" destination="aUt-lD-aje" eventType="touchUpInside" id="k5i-gI-f1M"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3o7-9C-tEm" customClass="YQImplementView" customModule="OpticalValleyUnite" customModuleProvider="target">
                                 <rect key="frame" x="20" y="387" width="335" height="240"/>
                                 <subviews>
@@ -137,7 +148,9 @@
                             <constraint firstAttribute="trailing" secondItem="9to-PZ-M0t" secondAttribute="trailing" id="OWC-bd-DaT"/>
                             <constraint firstItem="MST-xJ-RTB" firstAttribute="top" secondItem="9to-PZ-M0t" secondAttribute="bottom" id="QJc-GK-F9c"/>
                             <constraint firstAttribute="trailing" secondItem="3o7-9C-tEm" secondAttribute="trailing" constant="20" id="Z2o-ah-k73"/>
+                            <constraint firstItem="CWc-HI-h9q" firstAttribute="leading" secondItem="eTG-sa-rmW" secondAttribute="leading" constant="10" id="ZdK-Lj-8bg"/>
                             <constraint firstItem="9to-PZ-M0t" firstAttribute="leading" secondItem="eTG-sa-rmW" secondAttribute="leading" id="cWM-Ne-F6j"/>
+                            <constraint firstItem="CWc-HI-h9q" firstAttribute="top" secondItem="x3W-3a-JXO" secondAttribute="bottom" constant="10" id="gX2-ZE-rbn"/>
                             <constraint firstItem="9to-PZ-M0t" firstAttribute="top" secondItem="x3W-3a-JXO" secondAttribute="bottom" id="lWd-e8-13Q"/>
                         </constraints>
                     </view>
@@ -155,5 +168,6 @@
     </scenes>
     <resources>
         <image name="icon_fire_edit" width="20" height="20"/>
+        <image name="icon_map_location" width="22" height="22"/>
     </resources>
 </document>
